Docker and global configuration

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -18,7 +18,7 @@
 <title>Gomoku Board</title>
 </head>
 <body>
-	<div th:insert="~{/menu }"></div>
+	<div th:insert="~{menu}"></div>
 	<div class="container special">
 		<div id="board" style="width: fit-content">
 			<table>
