--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,10 +5,10 @@
 <title>Gomoku</title>
 </head>
 <body>
-	<div th:insert="~{/menu }"></div>
+	<div th:insert="~{menu}"></div>
 	<div class="container-fluid container special">
 
-		<h2 class="h2">Welcome to my Gomoku website !</h2>
+		<h2 class="h2">Welcome to my Gomoku website 4 !</h2>
 
 	</div>
 </body>
