--- a/src/main/resources/templates/online.html
+++ b/src/main/resources/templates/online.html
@@ -17,7 +17,7 @@
 <title>Gomoku Online</title>
 </head>
 <body>
-	<div th:insert="~{/menu }"></div>
+	<div th:insert="~{menu}"></div>
 	<div class="container special">
 		<div id="onlineBoards" style="width: fit-content">
 			<div class="container">
