--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -5,7 +5,7 @@
 <title>Gomoku Board</title>
 </head>
 <body>
-	<div th:insert="~{/menu }"></div>
+	<div th:insert="~{menu}"></div>
 	<div class="container-fluid container special">
 		<h2 class="h2">Board size</h2>
 		<div class="form-check">
