--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 	<div th:insert="~{menu}"></div>
 	<div class="container-fluid container special">
 
-		<h2 class="h2">Welcome to my Gomoku website 4 !</h2>
+		<h2 class="h2">Welcome to my Gomoku website !</h2>
 
 	</div>
 </body>
