--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -47,9 +47,17 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
+						<button type="submit" name="compute-move" id="compute-move"
+							class="btn btn-primary" value="Compute move">Compute move</button>
+					</div>
+				</div>
+			</div>
+			<div class="form-floating" style="display: inline-block">
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
 						<button type="submit" name="undo-move" id="undo-move"
 							class="btn btn-default" value="Revert Move">
-							<i class="fas fa-undo" style="color: #0d6efd"></i>
+							<em class="fas fa-undo" style="color: #0d6efd"></em>
 						</button>
 					</div>
 				</div>
@@ -59,6 +67,7 @@
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 		var moves = /*[[${game.moves}]]*/'default';
+		var boardSize = /*[[${game.boardSize}]]*/'default';
 		var _csrf = /*[[${_csrf}]]*/'default';
 		/*]]>*/
 	</script>
