--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Gomoku Board</title>
+<title>Settings</title>
 </head>
 <body>
 	<div th:insert="~{menu}"></div>
