--- a/src/main/resources/static/styles/board.css
+++ b/src/main/resources/static/styles/board.css
@@ -1,94 +1,106 @@
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	height: 100vh;
 }
 
 .mobile {
-    display: none;
+	display: none;
 }
 
 .desktop {
-    margin: 0;
-    width: 100%;
+	margin: 0;
+	width: 100%;
 }
 
 #board {
 	margin-right: 300px;
-    background-color:  #deba96;
+	background-color: #deba96;
 }
 
 .emptyCell {
-    background-color:  #deba96;
-    border: 1px solid black;
+	background-color: #deba96;
+	border: 1px solid black;
 }
 
 td {
-    text-align: center;
-    width: 40px;
-    height: 40px;
+	text-align: center;
+	width: 40px;
+	height: 40px;
 }
 
-.black-piece {
-    padding: 12px;
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 50px;
+.stone {
+	padding: 12px;
+	border: 1px solid black;
+	border-radius: 50px;
 }
 
-.white-piece {
-    padding: 12px;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 50px;
+.analysis {
+	opacity:0.5;
 }
 
-.green-piece {
-    padding: 12px;
-    background-color: green;
-    border: 1px solid black;
-    border-radius: 50px;
+.black {
+	background-color: black;
+}
+
+.white {
+	background-color: white;
+}
+
+.green {
+	background-color: green;
 }
 
 p {
-    display: inline-block;
+	display: inline-block;
 }
 
 #divider {
-    font-size: 90px;
-    margin-left: 15px;
-    margin-right: 15px;
+	font-size: 90px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 span {
-    display: inline-block;
+	display: inline-block;
 }
 
 .arrow {
-  border: solid black;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 3px;
+	border: solid black;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 3px;
 }
 
 .right {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
 }
 
 .left {
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
+	transform: rotate(135deg);
+	-webkit-transform: rotate(135deg);
 }
 
 .up {
-  transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
+	transform: rotate(-135deg);
+	-webkit-transform: rotate(-135deg);
 }
 
 .down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+}
+
+#computeProgress {
+	width: 100%;
+	background-color: grey;
+}
+
+#progressBar {
+	width: 1%;
+	height: 30px;
+	background-color: green;
 }
