--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -95,6 +95,7 @@
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 		var moves = /*[[${game.moves}]]*/'default';
+		var userSettings = /*[[${userSettings}]]*/'default';
 		var gameType = /*[[${game.type}]]*/'default';
 		var boardSize = /*[[${game.boardSize}]]*/'default';
 		var evaluation = /*[[${evaluation}]]*/'default';
