--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -9,19 +9,92 @@
 <body>
 	<div th:insert="~{menu}"></div>
 	<div class="container-fluid container special">
-		<h2 class="h2">Board size</h2>
-		<div class="form-check">
+		<label style="padding-right: 60px;">Board size</label>
+		<span>
 			<input class="form-check-input" type="radio" name="boardSize11" id="boardSize11">
 			<label class="form-check-label" for="flexRadioDefault1"> 11 </label>
-		</div>
-		<div class="form-check">
-			<input class="form-check-input" type="radio" name="boardSize13" id="boardSize13" checked>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="boardSize13" id="boardSize13">
 			<label class="form-check-label" for="flexRadioDefault2"> 13 </label>
-		</div>
-		<div class="form-check">
-			<input class="form-check-input" type="radio" name="boardSize15" id="boardSize15" checked>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="boardSize15" id="boardSize15">
 			<label class="form-check-label" for="flexRadioDefault3"> 15 </label>
+		</span>
+	</div>
+	<div class="container-fluid container special">
+		<div>
+		  <label style="padding-right: 23px;"class="form-check-label" for="displayAnalysis">
+		    Display analysis
+		  </label>
+		  <input class="form-check-input" type="checkbox" value="" id="displayAnalysis">
 		</div>
+	</div>
+	<div class="container-fluid container special">
+		<div>
+		  <label style="padding-right: 32px;"class="form-check-label" for="strikeEnabled">
+		    Strike enabled
+		  </label>
+		  <input class="form-check-input" type="checkbox" value="" id="strikeEnabled">
+		</div>
+	</div>
+	<div class="container-fluid container special">
+		<label style="padding-right: 47px;">Strike depth</label>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeDepth1" id="strikeDepth1">
+			<label class="form-check-label" for="strikeDepth1"> 1 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeDepth2" id="strikeDepth2">
+			<label class="form-check-label" for="strikeDepth2"> 2 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeDepth3" id="strikeDepth3">
+			<label class="form-check-label" for="strikeDepth3"> 3 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeDepth4" id="strikeDepth4">
+			<label class="form-check-label" for="strikeDepth4"> 4 </label>
+		</span>
+	</div>
+	<div class="container-fluid container special">
+		<label style="padding-right: 29px;">MinMax depth</label>
+		<span>
+			<input class="form-check-input" type="radio" name="minMaxDepth1" id="minMaxDepth1">
+			<label class="form-check-label" for="minMaxDepth1"> 1 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="minMaxDepth2" id="minMaxDepth2">
+			<label class="form-check-label" for="minMaxDepth2"> 2 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="minMaxDepth3" id="minMaxDepth3">
+			<label class="form-check-label" for="minMaxDepth3"> 3 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="minMaxDepth4" id="minMaxDepth4">
+			<label class="form-check-label" for="minMaxDepth4"> 4 </label>
+		</span>
+	</div>
+	<div class="container-fluid container special">
+		<label style="padding-right: 14px;">Evaluation depth</label>
+		<span>
+			<input class="form-check-input" type="radio" name="evaluationDepth1" id="evaluationDepth1">
+			<label class="form-check-label" for="evaluationDepth1"> 1 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="evaluationDepth2" id="evaluationDepth2">
+			<label class="form-check-label" for="evaluationDepth2"> 2 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="evaluationDepth3" id="evaluationDepth3">
+			<label class="form-check-label" for="evaluationDepth3"> 3 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="evaluationDepth4" id="evaluationDepth4">
+			<label class="form-check-label" for="evaluationDepth4"> 4 </label>
+		</span>
 	</div>
 	<script th:inline="javascript">
 		/*<![CDATA[*/
