--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -40,7 +40,7 @@
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
 						<button type="submit" name="reset-game" id="reset-game"
-							class="btn btn-default" value="Reset Game">
+							class="btn btn-default" title="Reset game">
 							<em class="fa-solid fa-power-off" style="color: #0d6efd"></em>
 						</button>
 					</div>
@@ -50,7 +50,7 @@
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
 						<button type="submit" name="undo-move" id="undo-move"
-							class="btn btn-default" value="Revert Move">
+							class="btn btn-default" title="Undo move">
 							<em class="fas fa-undo" style="color: #0d6efd"></em>
 						</button>
 					</div>
@@ -60,8 +60,8 @@
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
 						<button type="submit" name="compute-move" id="compute-move"
-							class="btn btn-default" value="Compute move">
-							<em class="fa-solid fa-computer" style="color: #0d6efd"></em>
+							class="btn btn-default" title="Compute move">
+							<em id="computeIcon" class="fa-solid fas fa-cog fa-spin" style="color: #0d6efd"></em>
 						</button>
 					</div>
 				</div>
@@ -70,8 +70,18 @@
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
 						<button type="submit" name="stop" id="stop"
-							class="btn btn-default" value="Stop" style="outline: none !important">
+							class="btn btn-default" title="Stop" style="outline: none !important">
 							<em class="fa-solid fa-stop" style="color: #0d6efd; outline: none !important"></em>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="form-floating" style="display: inline-block">
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
+						<button type="submit" name="lastMove" id="lastMove"
+							class="btn btn-default" title="Last move" style="outline: none !important">
+							<em class="fa-solid fa-question" style="color: #0d6efd; outline: none !important"></em>
 						</button>
 					</div>
 				</div>
@@ -86,9 +96,6 @@
 			</div>
 			<div class="computeProgress" id="computeProgress1">
 				<div class="progressBar" id="progressBar1"></div>
-			</div>
-			<div class="computeProgress" id="computeProgress2">
-				<div class="progressBar" id="progressBar2"></div>
 			</div>
 		</div>
 	</div>
