--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -30,10 +30,10 @@
             Play
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/game/LOCAL">Local game</a></li>
-            <li><a class="dropdown-item" href="/game/ONLINE">Online game</a></li>
+            <li><a class="dropdown-item" href="/game/local">Local game</a></li>
+            <li><a class="dropdown-item" href="/game/online">Online game</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/game/AI">Against computer</a></li>
+            <li><a class="dropdown-item" href="/game/ai">Against computer</a></li>
           </ul>
         </li>
         <li class="nav-item">
