add download and upload buttons

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -88,6 +88,26 @@
 			</div>
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
+						<button type="submit" name="downloadGame" id="downloadGame"
+							class="btn btn-default" title="Download game" style="outline: none !important">
+							<em class="fa-solid fa-download" style="color: #0d6efd; outline: none !important"></em>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="form-floating" style="display: inline-block">
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
+						<button type="submit" name="uploadGame" id="uploadGame"
+							class="btn btn-default" title="Upload game" style="outline: none !important">
+							<em class="fa-solid fa-upload" style="color: #0d6efd; outline: none !important"></em>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="form-floating" style="display: inline-block">
+				<div class="row">
 					<div>
 						<span>Evaluation : </span>
 						<span id="evaluationValue"></span>
