Improve last move icon, add download and upload features, add strike timeout setting

--- a/src/main/resources/static/styles/board.css
+++ b/src/main/resources/static/styles/board.css
@@ -37,6 +37,18 @@ td {
 	border-radius: 50px;
 }
 
+.last:before {
+    position: absolute;
+    content: '';
+    background-color:#FF0000;
+    border-radius:50%;
+    width: 12px;
+    height: 12px;
+    pointer-events: none;
+    margin-left: -5px;
+    margin-top: -5px;
+}
+
 .analysis {
 	opacity:0.5;
 }
