--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -40,6 +40,25 @@
 		</div>
 	</div>
 	<div class="container-fluid container special">
+		<label style="padding-right: 12px;">Strike timeout (s)</label>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeTimeout10" id="strikeTimeout10">
+			<label class="form-check-label" for="strikeTimeout10"> 10 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeTimeout20" id="strikeTimeout20">
+			<label class="form-check-label" for="strikeTimeout20"> 20 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeTimeout30" id="strikeTimeout30">
+			<label class="form-check-label" for="strikeTimeout30"> 30 </label>
+		</span>
+		<span>
+			<input class="form-check-input" type="radio" name="strikeTimeoutInf" id="strikeTimeoutInf">
+			<label class="form-check-label" for="strikeTimeoutInf"> Inf </label>
+		</span>
+	</div>
+	<div class="container-fluid container special">
 		<label style="padding-right: 47px;">Strike depth</label>
 		<span>
 			<input class="form-check-input" type="radio" name="strikeDepth1" id="strikeDepth1">
