add AI vs AI game feature

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -30,10 +30,11 @@
             Play
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/game/local">Local game</a></li>
-            <li><a class="dropdown-item" href="/game/online">Online game</a></li>
+            <li><a class="dropdown-item" href="/game/local">Human vs human</a></li>
+            <li><a class="dropdown-item" href="/game/ai">Human vs computer</a></li>
+            <li><a class="dropdown-item" href="/game/ai_vs_ai">Computer vs computer</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/game/ai">Against computer</a></li>
+            <li><a class="dropdown-item" href="/game/online">Online game</a></li>
           </ul>
         </li>
         <li class="nav-item">
