--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -97,22 +97,22 @@
 		</span>
 	</div>
 	<div class="container-fluid container special">
-		<label style="padding-right: 14px;">Evaluation depth</label>
+		<label style="padding-right: 14px;">MinMax analysis extent</label>
 		<span>
-			<input class="form-check-input" type="radio" name="evaluationDepth1" id="evaluationDepth1">
-			<label class="form-check-label" for="evaluationDepth1"> 1 </label>
+			<input class="form-check-input" type="radio" name="minMaxAnalysisExtent1" id="minMaxAnalysisExtent1">
+			<label class="form-check-label" for="minMaxAnalysisExtent1"> 1 </label>
 		</span>
 		<span>
-			<input class="form-check-input" type="radio" name="evaluationDepth2" id="evaluationDepth2">
-			<label class="form-check-label" for="evaluationDepth2"> 2 </label>
+			<input class="form-check-input" type="radio" name="minMaxAnalysisExtent2" id="minMaxAnalysisExtent2">
+			<label class="form-check-label" for="minMaxAnalysisExtent2"> 2 </label>
 		</span>
 		<span>
-			<input class="form-check-input" type="radio" name="evaluationDepth3" id="evaluationDepth3">
-			<label class="form-check-label" for="evaluationDepth3"> 3 </label>
+			<input class="form-check-input" type="radio" name="minMaxAnalysisExtent3" id="minMaxAnalysisExtent3">
+			<label class="form-check-label" for="minMaxAnalysisExtent3"> 3 </label>
 		</span>
 		<span>
-			<input class="form-check-input" type="radio" name="evaluationDepth4" id="evaluationDepth4">
-			<label class="form-check-label" for="evaluationDepth4"> 4 </label>
+			<input class="form-check-input" type="radio" name="minMaxAnalysisExtent4" id="minMaxAnalysisExtent4">
+			<label class="form-check-label" for="minMaxAnalysisExtent4"> 4 </label>
 		</span>
 	</div>
 	<script th:inline="javascript">
