--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 			<div class="computeProgress" id="computeProgress1">
-				<div class="progressBar" id="progressBar1">
+				<div class="minMaxProgressBar" id="progressBar1">
 				</div>
 			</div>
 		</div>
