Better handle of winning moves

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -131,6 +131,7 @@
 		/*<![CDATA[*/
 		var gameId = /*[[${game.id}]]*/'default';
 		var moves = /*[[${game.moves}]]*/'default';
+		var winningMoves = /*[[${winningMoves}]]*/'default';
 		var userSettings = /*[[${userSettings}]]*/'default';
 		var gameType = /*[[${game.type}]]*/'default';
 		var boardSize = /*[[${game.boardSize}]]*/'default';
