Add redo feature

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -59,6 +59,16 @@
 			<div class="form-floating" style="display: inline-block">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
+						<button type="submit" name="undo-move" id="redo-move"
+							class="btn btn-default" title="Redo move">
+							<em class="fas fa-redo" style="color: #0d6efd"></em>
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="form-floating" style="display: inline-block">
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
 						<button type="submit" name="compute-move" id="compute-move"
 							class="btn btn-default" title="Compute move">
 							<em id="computeIcon" class="fa-solid fas fa-cog fa-spin" style="color: #0d6efd"></em>
