--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -147,6 +147,7 @@
 		var boardSize = /*[[${game.boardSize}]]*/'default';
 		var evaluation = /*[[${evaluation}]]*/'default';
 		var isComputing = /*[[${isComputing}]]*/'default';
+		var webSocketEngineUrl = /*[[${webSocketEngineUrl}]]*/'default';
 		var _csrf = /*[[${_csrf}]]*/'default';
 		/*]]>*/
 	</script>
