Add online feature

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -148,6 +148,7 @@
 		var evaluation = /*[[${evaluation}]]*/'default';
 		var isComputing = /*[[${isComputing}]]*/'default';
 		var webSocketEngineUrl = /*[[${webSocketEngineUrl}]]*/'default';
+		var username = /*[[${username}]]*/'default';
 		var _csrf = /*[[${_csrf}]]*/'default';
 		/*]]>*/
 	</script>
