--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -34,7 +34,7 @@
             <li><a class="dropdown-item" href="/game/ai">Against computer</a></li>
             <li><a class="dropdown-item" href="/game/ai_vs_ai">Only computer</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/game/online">Online game</a></li>
+            <li><a class="dropdown-item" href="/online">Online game</a></li>
           </ul>
         </li>
         <li class="nav-item">
