--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,8 +43,8 @@
 					</div>
 					
 					<div class="form-floating mb-3">
-					  <input type="email" name = "username" class="form-control" id="username" placeholder="name@example.com">
-					  <label for="username">Email address</label>
+					  <input name = "username" class="form-control" id="username" placeholder="name@example.com">
+					  <label for="username">Username</label>
 					</div>
 
 					<div class="form-floating"style="margin-bottom:15px">
