--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -43,16 +43,18 @@
         <li class="nav-item">
           <a class="nav-link" th:href="@{/settings}">Settings</a>
         </li>
-        <li class="nav-item" sec:authorize="isAuthenticated()">
-          <a class="nav-link" th:href="@{/logout}">
-            Logout
-          </a>
-        </li>
       </ul>
     </div>
-	<span class="nav-link" style="margin: 10px;">
-		[[${username}]]
-	</span>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+		<li class="nav-link" style="color: #0d6efd">
+			[[${username}]]
+		</li>
+	    <li class="nav-item" sec:authorize="isAuthenticated()">
+	      <a class="nav-link" th:href="@{/logout}">
+	        Logout
+	      </a>
+	    </li>
+    </ul>
   </div>
 </nav>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>	
