--- a/src/main/resources/templates/online.html
+++ b/src/main/resources/templates/online.html
@@ -19,20 +19,15 @@
 <body>
 	<div th:insert="~{menu}"></div>
 	<div class="container special">
-		<div id="onlineBoards" style="width: fit-content">
-			<div class="container">
-				<div class="row">
-					<div class="col" id="connectedUsersContainer">
-						Connected users:
-					</div>
+		<div id="onlineBoards">
+			<div class="row">
+				<div class="col" id="connectedUsersContainer">
+					<strong>Connected users:</strong>
 				</div>
-				<div class="row">
-					<div class="col" id="challengesContainer">
-						Challengers:
-					</div>
+				<div class="col" id="challengesContainer">
+					<strong>Challengers:</strong>
 				</div>
 			</div>
-
 		</div>
 	</div>
 	<script th:inline="javascript">
