Add game history feature

--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -138,6 +138,16 @@
 					</div>
 				</div>
 			</div>
+			<div class="form-floating" style="display: inline-block">
+				<div class="row">
+					<div class="col-sm-6 col-sm-offset-3">
+						<button type="submit" name="saveGame" id="saveGame"
+							class="btn btn-default" title="Save game" style="outline: none !important">
+							<em class="fa-solid fa-save" style="color: #0d6efd; outline: none !important"></em>
+						</button>
+					</div>
+				</div>
+			</div>
 			<div class="computeProgress" id="computeProgress1">
 				<div class="minMaxProgressBar" id="progressBar1">
 				</div>
