--- a/src/main/resources/templates/online.html
+++ b/src/main/resources/templates/online.html
@@ -20,6 +20,7 @@
 	<div th:insert="~{menu}"></div>
 	<div class="container special">
 		<div id="onlineBoards">
+			<h3>Online</h3>
 			<div class="row">
 				<div class="col" id="connectedUsersContainer">
 					<strong>Connected users:</strong>
