--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -38,7 +38,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">History</a>
+          <a class="nav-link" th:href="@{/history}">History</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/settings}">Settings</a>
