--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="_csrf" th:content="${_csrf.token}" />
+<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 <link href="https://fonts.googleapis.com/css?family=Montserrat"
 	rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans"
@@ -12,15 +14,13 @@
 	rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 	crossorigin="anonymous">
+	<link th:href="@{/styles/history.css}" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!-- Include jQuery -->
-<script src="https://kit.fontawesome.com/561a872f6a.js"
-	crossorigin="anonymous"></script>
-<!-- Add DataTables CSS and JavaScript -->
 <link rel="stylesheet" type="text/css"
 	href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
 <script type="text/javascript" charset="utf8"
 	src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <title>Game history</title>
 </head>
 <body>
@@ -31,11 +31,12 @@
 			<table id="gameHistoryTable" class="display">
 				<thead>
 					<tr>
-						<th>Game type</th>
+						<th>Date</th>
 						<th>Black player</th>
 						<th>White player</th>
 						<th>Winner</th>
-						<th>Date</th>
+						<th></th>
+						<th></th>
 						<!-- Add more table headers for other game attributes -->
 					</tr>
 				</thead>
@@ -46,23 +47,28 @@
 
 		</div>
 	</div>
-
+	
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-		var _csrf = /*[[${_csrf}]]*/'default';
+		var username = /*[[${username}]]*/'default';
 		/*]]>*/
 	</script>
 
 	<script type="text/javascript">
+		var table;
 		$(document).ready(function() {
-			$('#gameHistoryTable').DataTable({
+			table = $('#gameHistoryTable').DataTable({
 				"ajax" : {
-					"url" : "/history/data", // Replace with your actual endpoint for fetching game history data
+					"url" : "/history/get/" + username,
 					"dataSrc" : ""
 				},
-				"columns" : [ {
-					"data" : "gameType"
-				}, 
+				"columns" : [ 
+				{
+	                "data": "date",
+	                "render": function(data) {
+	                    return moment(data).format("MM-DD-YYYY HH:mm:ss");
+	                }
+	            }, 
 				{
 					"data" : "blackPlayer.username"
 				}, 
@@ -76,11 +82,75 @@
 	                }
 	            },
 				{
-					"data" : "date"
-				},
+	                "data": null,
+	                "render": function (data, type, row) {
+	                    return '<i title="View" class="fas fa-search view-icon" data-id="' + row.id + '"></i>';
+	                }
+	            },
+				{
+	                "data": null,
+	                "render": function (data, type, row) {
+	                    return '<i title="Delete" class="fas fa-trash delete-icon" data-id="' + row.id + '"></i>';
+	                }
+	            },
 				]
 			});
 		});
+		
+	    $('#gameHistoryTable tbody').on('click', '.view-icon', function() {
+	    	 
+	        var gameId = $(this).data('id');
+	        
+	        // Extract _csrf token value and header name from meta tags
+	        var csrfToken = $('meta[name=_csrf]').attr('content');
+	        var csrfHeader = $('meta[name=_csrf_header]').attr('content');
+	        
+	        // Create an object to hold the headers
+	        var headers = {};
+	        headers[csrfHeader] = csrfToken;
+	        
+	        // Make a call to the backend to delete the corresponding record
+	        $.ajax({
+	            url: '/history/view/' + gameId,
+	            type: 'POST',
+	            headers: headers,
+	            success: function() {
+	                window.location.href = "/game/history";
+	            },
+	            error: function() {
+	                // Handle error if deletion fails
+	                alert('Failed to view game with ID: ' + gameId);
+	            }
+	        });
+	    });
+	    $('#gameHistoryTable tbody').on('click', '.delete-icon', function() {
+	    	 
+	        var gameId = $(this).data('id');
+	        
+	        // Extract _csrf token value and header name from meta tags
+	        var csrfToken = $('meta[name=_csrf]').attr('content');
+	        var csrfHeader = $('meta[name=_csrf_header]').attr('content');
+	        
+	        // Create an object to hold the headers
+	        var headers = {};
+	        headers[csrfHeader] = csrfToken;
+	        
+	        // Make a call to the backend to delete the corresponding record
+	        $.ajax({
+	            url: '/history/delete/' + gameId,
+	            type: 'DELETE',
+	            headers: headers,
+	            success: function() {
+	                // Remove the row from the DataTable upon successful deletion
+	                table.row($(this).parents('tr')).remove().draw();
+	                table.ajax.reload();
+	            },
+	            error: function() {
+	                // Handle error if deletion fails
+	                alert('Failed to delete game with ID: ' + gameId);
+	            }
+	        });
+	    });
 	</script>
 
 </body>
