--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,6 +9,8 @@
 	rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 	crossorigin="anonymous">
+<script src="https://kit.fontawesome.com/561a872f6a.js"
+	crossorigin="anonymous"></script>
 <style>
 	.special {
 		padding-top: 50px;
@@ -41,8 +43,10 @@
           <a class="nav-link" th:href="@{/history}">History</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/settings}">Settings</a>
-        </li>
+        	<a class="nav-link" th:href="@{/settings}">
+				<em class="fas fa-gear"></em>
+			</a>
+		</li>
       </ul>
     </div>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -50,9 +54,9 @@
 			[[${username}]]
 		</li>
 	    <li class="nav-item" sec:authorize="isAuthenticated()">
-	      <a class="nav-link" th:href="@{/logout}">
-	        Logout
-	      </a>
+	    	<a class="nav-link" th:href="@{/logout}">
+				<em class="fas fa-sign-out"></em>
+			</a>
 	    </li>
     </ul>
   </div>
